Ensure mkinstalldirs is executed with sh and is executable
Update configure.in to invoke mkinstalldirs with 'sh' to avoid execution issues if the script lacks execute permissions. Also, modify the macOS install script to explicitly set the executable bit on autoconf/mkinstalldirs, addressing cases where the file may lose +x during checkout.

--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -931,10 +931,10 @@ dnl find the mkinstalldirs script in another subdir than ($topdir).
 dnl Try to locate it.
 MKINSTALLDIRS=
 if test -n "$ac_aux_dir"; then
-   MKINSTALLDIRS="$ac_aux_dir/mkinstalldirs"
+   MKINSTALLDIRS="sh $ac_aux_dir/mkinstalldirs"
 fi
 if test x$MKINSTALLDIRS = x ; then
-   MKINSTALLDIRS="\$(topdir)/autoconf/mkinstalldirs"
+   MKINSTALLDIRS="sh \$(topdir)/autoconf/mkinstalldirs"
 fi
 AC_SUBST(MKINSTALLDIRS)
 
