--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,10 +35,12 @@ jobs:
       - name: Install build tools
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential autoconf automake libtool
+          sudo apt-get install -y build-essential autoconf automake libtool pkg-config libusb-1.0-0-dev
 
       - name: Configure
-        run: ./configure
+        run: |
+          chmod +x ./configure
+          sh ./configure
         working-directory: .
 
       - name: Make
